# lemon

./: Cargo.toml  justfile
src/: client.rs  clipboard.rs  commands.rs  hub.rs  main.rs  ntfy.rs  server.rs
