[package]
name = "lemonade-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
structopt = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
arboard = { version = "3.4", features = ["wayland-data-control"] }
open = "5.3"
tracing = "0.1"
tracing-subscriber = "0.3"
tokio = { version = "1.40", features = ["full"] }
tokio-tungstenite = { version = "0.23", features = ["native-tls"] }
futures-util = "0.3"
url = "2.5"
local-ip-address = "0.6"
